Updated Config.json || Added one new dependencies needed for discord-webhook